; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/xulkal/extr_custom_encoder.c_encoder_update_user.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/xulkal/extr_custom_encoder.c_encoder_update_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@encoders = common dso_local global i32** null, align 8
@RGB_OLED_MENU = common dso_local global i64 0, align 8
@rgb_encoder_state = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @encoder_update_user(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i32 (...) @is_keyboard_master()
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %18

8:                                                ; preds = %2
  %9 = load i32**, i32*** @encoders, align 8
  %10 = load i64, i64* %3, align 8
  %11 = getelementptr inbounds i32*, i32** %9, i64 %10
  %12 = load i32*, i32** %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = call i32 @pgm_read_word(i32* %15)
  %17 = call i32 @tap_code16(i32 %16)
  br label %18

18:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @is_keyboard_master(...) #1

declare dso_local i32 @tap_code16(i32) #1

declare dso_local i32 @pgm_read_word(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
